[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
num_cpus = "1.16.0"
rayon = "1.8.0"
rust-embed = "8.0.0"
advent-of-code-proc-macro = { path = "../advent-of-code-proc-macro" }


[[bench]]
name = "benchmark"
harness = false
